<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MaShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ustawienia</string>

    <string name="menu_home">Strona główna</string>
    <string name="menu_cart">Koszyk</string>
    <string name="menu_my_orders">Moje zamówienia</string>
    <string name="menu_add_offer">Dodaj ofertę</string>
    <string name="menu_set_user_details">Ustaw dane użytkownika</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_search">Szukaj</string>
    <string name="menu_category">Kategoria</string>
    <string name="menu_offer">Oferta</string>
    <string name="menu_sign_out">Wyloguj się</string>

    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="sign_in">Logowanie</string>
    <string name="sign_in_btn">Zaloguj się</string>
    <string name="sign_up">Rejestracja</string>
    <string name="sign_up_btn">Zarejestruj się</string>
    <string name="dont_log_off">Nie wylogowywuj mnie</string>
    <string name="consent_checkbox_text">Akceptuję regulamin i politykę prywatności</string>

    <string name="wait_for_photo_sent">Poczekaj na wysłanie zdjęcia!</string>
    <string name="fields_cannot_be_empty">Pola nie mogą być puste!</string>
    <string name="wrong_category">Nieprawidłowa kategoria!</string>
    <string name="user_data_must_be_filled">Dane użytkownika muszą być uzupełnione!</string>
    <string name="offer_added_successfully">Pomyślnie dodano ofertę.</string>
    <string name="cart_cleared">Wyczyszczono koszyk.</string>
    <string name="ordered_successfully">Pomyślnie zamówiono.</string>
    <string name="order_number">Zamówienie nr</string>
    <string name="ordered_day">Zamówiono dnia:</string>
    <string name="added_to_cart">Dodano do koszyka.</string>
    <string name="data_saved_successfully">Pomyślnie zapisano dane.</string>
    <string name="title">Tytuł</string>

    <string name="email_is_required">Email jest wymagany</string>
    <string name="email_is_wrong">Email jest nieprawidłowy</string>
    <string name="password_is_required">Hasło jest wymagane</string>
    <string name="password_too_short">Hasło musi mieć co najmniej 8 znaków</string>
    <string name="consent_not_checked">Akceptacja regulaminu jest wymagana</string>
    <string name="confirmation_email_sent_at">Email weryfikacyjny został wysłany na</string>
    <string name="wrong_email_or_password">Błędny email lub hasło</string>
    <string name="internet_connection_error">Błąd połączenia z Internetem</string>
    <string name="unknown_error">Nieznany błąd</string>
    <string name="user_with_email_already_exist">Użytkownik o tym emailu już istnieje</string>
    <string name="error">Błąd</string>
    <string name="welcome_to_app">Witaj w aplikacji MaShop!</string>
    <string name="sign_up_to_continue">Zaloguj się lub zarejestruj aby kontynuować</string>
    <string name="price">Cena</string>
    <string name="description">Opis</string>
    <string name="category">Kategoria</string>
    <string name="photo">Zdjęcie</string>
    <string name="choose">Wybierz</string>
    <string name="sending">Wysyłanie…</string>
    <string name="add">Dodaj</string>
    <string name="items_in_cart">Przedmioty w koszyku</string>
    <string name="cart_is_empty">Koszyk jest pusty</string>
    <string name="summary_cost">Koszt razem:</string>
    <string name="shipment">Dostawa</string>
    <string name="take_in_point">Odbiór w punkcie</string>
    <string name="shipment_provider">InPost</string>
    <string name="shipment_provider2">Poczta Polska</string>
    <string name="shipment_address" tools:ignore="Typos">Adres wysyłki</string>
    <string name="loading">Ładowanie…</string>
    <string name="clear_cart">Wyczyść koszyk</string>
    <string name="order_and_pay">Zamów i zapłać</string>
    <string name="hello_again_in_app">Witaj ponownie w aplikacji MaShop!</string>
    <string name="recently_added_offers">Ostatnio dodane oferty</string>
    <string name="no_results">Brak wyników</string>
    <string name="available_categories">Dostępne kategorie</string>
    <string name="product_photo">Zdjęcie produktu</string>
    <string name="add_to_cart">Dodaj do koszyka</string>
    <string name="offer_content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet eros lobortis, varius nibh vel, eleifend mauris.</string>
    <string name="seller">Sprzedający</string>
    <string name="seller_name_placeholder">Janusz</string>
    <string name="seller_location_placeholder">Wrocław</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="country">Kraj</string>
    <string name="city">Miejscowość</string>
    <string name="zip_code">Kod pocztowy</string>
    <string name="address" tools:ignore="Typos">Adres</string>
    <string name="set_to">Ustaw</string>
    <string name="order_status_in_progress">Status: W trakcie realizacji</string>
    <string name="count">Sztuk:</string>
    <string name="already_in_cart">Produkt już znajduje się w koszyku!</string>
    <string name="offer_photo">Zdjęcie produktu</string>
    <string name="zero">0</string>
    <string name="_1000_zl">1000 zł</string>
    <string name="_1">1</string>
    <string name="_minus_1">-1</string>
    <string name="_0_zl">0 zł</string>
</resources>