<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/baseline_corporate_fare_24"
            android:title="@string/menu_my_orders" />
        <item
            android:id="@+id/nav_add_offer"
            android:icon="@drawable/baseline_add_circle_24"
            android:title="@string/menu_add_offer" />
        <item
            android:id="@+id/nav_set_user_details"
            android:icon="@drawable/baseline_account_box_24"
            android:title="@string/menu_set_user_details" />
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/baseline_settings_24"-->
<!--            android:title="@string/menu_settings" />-->
        <item
            android:id="@+id/nav_sign_off"
            android:icon="@drawable/baseline_power_settings_new_24"
            android:onClick="signOut"
            android:title="@string/menu_sign_out" />
    </group>
</menu>