<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <activity
        android:id="@+id/nav_welcome"
        android:name="com.example.mashop.WelcomeActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_welcome" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mashop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_SearchFragment"
            app:destination="@id/nav_search" />
        <action
            android:id="@+id/action_HomeFragment_to_OfferFragment"
            app:destination="@id/nav_offer" />
        <action
            android:id="@+id/action_HomeFragment_to_CategoryFragment"
            app:destination="@id/nav_category" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.mashop.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_CartFragment_to_MyOrdersFragment"
            app:destination="@id/nav_my_orders"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_set_user_details"
        android:name="com.example.mashop.ui.set_userdetails.SetUserDetailsFragment"
        android:label="@string/menu_set_user_details"
        tools:layout="@layout/fragment_set_user_details" />

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.mashop.ui.my_orders.MyOrdersFragment"
        android:label="@string/menu_my_orders"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_offer"
        android:name="com.example.mashop.ui.add_offer.AddOfferFragment"
        android:label="@string/menu_add_offer"
        tools:layout="@layout/fragment_add_offer">
        <action
            android:id="@+id/action_AddOfferFragment_to_HomeFragment"
            app:destination="@id/nav_home" />
    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/nav_settings"-->
<!--        android:name="com.example.mashop.ui.home.HomeFragment"-->
<!--        android:label="@string/menu_settings"-->
<!--        tools:layout="@layout/fragment_home" />-->

    <fragment
        android:id="@+id/nav_offer"
        android:name="com.example.mashop.ui.offer.OfferFragment"
        android:label="@string/menu_offer"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.mashop.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_SearchFragment_to_OfferFragment"
            app:destination="@id/nav_offer" />
    </fragment>

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.mashop.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_CategoryFragment_to_OfferFragment"
            app:destination="@id/nav_offer" />
    </fragment>
</navigation>