<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:id="@+id/subText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_continue" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:onClick="loginClick"
        android:text="@string/sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:onClick="signupClick"
        android:text="@string/sign_up" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:visibility="visible" />
</LinearLayout>
