<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/offerListItemImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/offer_photo"
        android:src="@drawable/baseline_insert_photo_24" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/offerListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/offerListItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorPrimary" />

    </LinearLayout>

</LinearLayout>